--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="doctor.png">
+  <link type="Image/x-icon" href="/favicon.ico" rel="icon">
   <title>HELPIK</title>
 </head>
 <body>
-  <h1>Ответы на тест</h1>
-  <label for="question">Введите вопрос:</label>
-  <input type="text" id="question" oninput="getAnswer()">
+  <header>
+    <h1>HelpiK</h1>
+    <img src="./doctor.png">
+  </header>
+
+  <input type="text" id="question" placeholder="Введите вопрос..." oninput="getAnswer()">
 
   <p id="answer"></p>
   
