--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="doctor.png">
   <link type="Image/x-icon" href="/favicon.ico" rel="icon">
-  <title>HELPIK</title>
+  <title>HelpiK</title>
 </head>
 <body>
   <header>
