feat: add button for clear input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <img src="./doctor.png">
   </header>
 
-  <input type="text" id="question" placeholder="Введите вопрос..." oninput="getAnswer()">
+  <div class="inptut-box">
+    <input type="text" id="question" placeholder="Введите вопрос...">
+    <button id="clear">X</button>
+  </div>
 
   <p id="answer"></p>
   
